[package]
name = "td-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = { version = "0.6", default-features = false, features = ["stable_graph", "serde-1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
