[package]
name = "td-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanoid = "0.4"
petgraph = { version = "0.6", default-features = false, features = ["stable_graph", "serde-1"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"
time = { version = "0.3", features = ["serde", "serde-human-readable", "local-offset", "formatting"] }
