[package]
name = "td-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "td"
path = "src/main.rs"

[dependencies]
crossterm = "0.25"
downcast-rs = "1.2"
predicates = { version = "2.1", default-features = false }
td-lib = { path = "../td-lib" }
td-util = { path = "../td-util" }
textwrap = { version = "0.16", default-features = false }
tui = "0.19"
tui-input = "0.6"
