[package]
name = "td-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "td"
path = "src/main.rs"

[dependencies]
crossterm = "0.26"
downcast-rs = "1.2"
predicates = { version = "3", default-features = false }
td-lib = { path = "../td-lib" }
td-util = { path = "../td-util" }
textwrap = { version = "0.16", default-features = false }
ratatui = "0.22"
tui-input = "0.7"
